# premiumplus

./: README_INSTRUCCIONES.md  package.json
.github/workflows/: build-windows-msi.yml
app/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
